Add FontAwesome icons library and make container to be responsive in display

--- a/css/leon.css
+++ b/css/leon.css
@@ -14,3 +14,31 @@ body {
 }
 
 /* end global rules */
+
+.parent {
+  background-color: #eee;
+}
+
+.container {
+  background-color: #aaa;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 962px;
+  }
+}
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
