--- a/css/leon.css
+++ b/css/leon.css
@@ -12,19 +12,132 @@
 body {
   font-family: "Work Sans", sans-serif;
 }
+:root {
+  --main-color: #10cab7;
+}
 
 /* end global rules */
 
-.parent {
-  background-color: #eee;
+/* start header */
+
+.header {
+  /* width: 500px; */
+  padding: 20px;
+}
+.header .container {
+  display: flex;
+
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
 }
 
-.container {
-  background-color: #aaa;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+.header .container .logo {
+  width: 60px;
+}
+.header .container .links {
+  position: relative;
+}
+.header .container .links .icon {
+  width: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.header .container .links:hover .icon span:nth-child(2) {
+  width: 100%;
+}
+.header .container .links:hover ul {
+  display: block;
+}
+.header .container .links ul {
+  display: none;
+  list-style: none;
+  text-decoration: none;
+  text-decoration-line: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  width: 200px;
+  z-index: 1;
+  top: calc(100% + 15px);
+  /* top: 40px; */
+  background-color: #eee;
+}
+.header .container .links:hover ul {
+  display: block;
+}
+.header .container .links ul::before {
+  content: "";
+  border: 15px solid;
+  border-color: transparent transparent #eee transparent;
+  position: absolute;
+  padding: 0px;
+  margin: 0px;
+  height: 0px;
+  top: -30px;
+  right: 5px;
+}
+
+.header .container .links ul li {
+  display: block;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  text-decoration: none;
+  transition: 0.3s ease-out;
+}
+.header .container .links ul li:hover {
+  padding-left: 20px;
+}
+.header .container .links ul li a {
+  text-decoration: none;
+  color: #333;
+  text-transform: capitalize;
+  /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
+  font-size: large;
+}
+.header .container .links ul li:not(:last-child) {
+  border-bottom: 1px solid #aaa;
+}
+.header .container .links .icon span {
+  height: 2px;
+  margin-bottom: 5px;
+
+  background-color: black;
+}
+.header .container .links .icon span:first-child {
+  width: 100%;
+}
+.header .container .links .icon span:nth-child(2) {
+  width: 50%;
+  height: 1px;
+  transition: 0.3s;
+}
+.header .container .links .icon span:last-child {
+  width: 100%;
+}
+.landing {
+  background-image: url(../images/mountain\ Black\ and\ white.jpg);
+  height: calc(100vh - 64px);
+  position: relative;
+}
+.landing .intro-Text h2 {
+  font-size: 50px;
+  margin: 0;
+  color: var(--main-color);
+}
+.landing .intro-Text p {
+  font-size: 19px;
+}
+.landing .intro-Text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 320px;
+  text-align: center;
+  transform: translate(-50%, -50%);
 }
 
 @media (min-width: 768px) {
@@ -42,3 +155,5 @@ body {
     width: 1170px;
   }
 }
+
+/* end Header */
