--- a/css/leon.css
+++ b/css/leon.css
@@ -17,6 +17,8 @@ body {
   --secondary-color: #2c4755;
   --section-background: #f6f6f6;
   --main-padding: 60px;
+  --main-transition: 0.3;
+  --center-transform: translate(-50%, -50%);
 }
 
 /* end global rules */
@@ -69,7 +71,7 @@ body {
   width: 200px;
   z-index: 1;
   top: calc(100% + 15px);
-  /* top: 40px; */
+
   background-color: #eee;
 }
 .header .container .links:hover ul {
@@ -93,7 +95,7 @@ body {
   padding-bottom: 10px;
   padding-left: 10px;
   text-decoration: none;
-  transition: 0.3s ease-out;
+  transition: var(--main-transition) ease-out;
 }
 .header .container .links ul li:hover {
   padding-left: 20px;
@@ -102,7 +104,7 @@ body {
   text-decoration: none;
   color: #333;
   text-transform: capitalize;
-  /* font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif; */
+
   font-size: large;
 }
 .header .container .links ul li:not(:last-child) {
@@ -120,7 +122,7 @@ body {
 .header .container .links .icon span:nth-child(2) {
   width: 50%;
   height: 1px;
-  transition: 0.3s;
+  transition: var(--main-transition);
 }
 .header .container .links .icon span:last-child {
   width: 100%;
@@ -144,7 +146,7 @@ body {
   left: 50%;
   width: 320px;
   text-align: center;
-  transform: translate(-50%, -50%);
+  transform: var(--center-transform);
 }
 /* start features */
 .features {
@@ -152,10 +154,6 @@ body {
   background-color: var(--section-background);
 }
 .features .container {
-  display: grid;
-
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-
   grid-gap: 20px;
 }
 .features .container .feat {
@@ -192,6 +190,11 @@ body {
   text-align: center;
   color: #797979;
 }
+
+.grid-adding {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+}
 /* end componant */
 /* start services */
 .services {
@@ -199,8 +202,6 @@ body {
   padding-bottom: 60px;
 }
 .services-content {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 30px;
   margin-top: 80px;
 }
@@ -209,7 +210,6 @@ body {
   display: flex;
   justify-content: space-between;
 
-  /* width: fit-content; */
   /* grid-template-columns: 1fr, 3fr;
   grid-template-rows: 1fr;
   grid-area: "logo desc";
@@ -235,10 +235,8 @@ body {
 
 .services-content .col .image {
   position: relative;
-  /* z-index: 5; */
-  text-align: center;
 
-  /* height: 315px; */
+  text-align: center;
 }
 .col .image img {
   height: 350px;
@@ -260,13 +258,11 @@ html {
   scroll-behavior: smooth;
 }
 /* start protofolio */
+
 .protofolio {
   background-color: var(--section-background);
   padding-top: 60px;
   padding-bottom: 60px;
-  /* padding: var(--main-padding); */
-  /* text-align: center; */
-  /* margin: 0; */
 }
 
 .projects {
